# audio-to-midi

./: .gitignore  README.md  audio_to_midi.py  audio_to_midi_dataset.py  copy_weights.py  dataset.py  export.py  grain_loader.py  infer.py  infer_tf.py  inspect_model.py  main.py  metrics.py  model.py  parallel_audio_reader.py  position_encoding.py  requirements.txt  resnext_model.py  rope.py  test_position_encoding.py  train.py  training_analysis.py
rust-plugins/: Cargo.toml  build-ios-lib.sh  build.rs  cbindgen.toml  pyproject.toml
rust-plugins/.cargo/: config.toml
rust-plugins/src/: cbinds.rs  common.rs  lib.rs  python.rs
saved_checkpoints/128x512x2x4_50000/: test_loss.csv  train_loss.csv
saved_checkpoints/128x512x2x6_10000000/: test_loss.csv  train_loss.csv
saved_checkpoints/256x1024x4x8_500000/: test_loss.csv  train_loss.csv
saved_checkpoints/256x1024x4x8_500000_2/: test_loss.csv  train_loss.csv
saved_checkpoints/256x1024x4x8_500000_tpu/: metadata.json  test_loss.csv  train_loss.csv
