[package]
name = "rust-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_plugins"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
numpy = "0.20.0"
tokio = { version = "1.36", features = ["full"] }
once_cell = "1.19.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
