[package]
name = "modelutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "modelutil"
crate-type = ["cdylib"]

[features]
default = []
python = [ "pyo3", "numpy", "tokio", "futures", "once_cell", "csv", "serde", "uuid" ]
cbinds = []

[build-dependencies]
cbindgen = "0.20"

[dependencies]
log = "0.4"
env_logger = "0.11"

half = { version = "2.4.1", features = [ "num-traits" ] }
ndarray = "0.15"
num-traits = "0.2"

# Dependencies only used for Python
pyo3 = { version = "0.20.3", features = ["extension-module"], optional = true }
numpy = { version = "0.20.0", optional = true }
tokio = { version = "1.36", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
once_cell = { version = "1.19.0", optional = true }
csv = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.8", features = [ "v4", "fast-rng" ], optional = true }
